# tigris-client-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.json  Makefile  README.md  pyproject.toml  requirements.txt  reviewpad.yml
.github/workflows/: ci.yml  pre-release.yml  release.yml
scripts/: proto.py
tests/: __init__.py  test_auth.py  test_client.py  test_dependencies.py  test_documents.py  test_search.py  test_search_index.py  test_types_client_config.py  test_types_filters_logical.py  test_types_filters_selector.py  test_types_search.py  test_types_sort.py  test_vector_store.py
tests/typings/: test_search.py
tigris/: client.py  collection.py  database.py  errors.py  utils.py
tigrisdb/: __init__.py  auth.py  client.py  collection.py  config.py  database.py  errors.py  search.py  search_index.py  types.py  utils.py  vector_store.py
tigrisdb/types/: __init__.py  search.py  sort.py  vector.py
tigrisdb/types/filters/: __init__.py  logical.py  selector.py
